Import of EXODIST/Parallel-Runner-0.004 from CPAN.
gitpan-cpan-distribution: Parallel-Runner
gitpan-cpan-version:      0.004
gitpan-cpan-path:         EXODIST/Parallel-Runner-0.004.tar.gz
gitpan-cpan-author:       EXODIST
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -51,6 +51,9 @@ ACCESSORS
     $val = $runner->exit_callback( \&callback )
         Codref to call just before a child exits (called within child)
 
+    $val = $runner->iteration_delay( $float );
+        How long to wait per iteration if nothing has changed.
+
     $val = $runner->iteration_callback( $newval )
         Coderef to call multiple times in a loop while run() is blocking
         waiting for a process slot.
