--- a/README
+++ b/README
@@ -64,10 +64,11 @@ ACCESSORS
         child process. The second is the pid of the child process. The third
         used to be the return of waitpid, but this is depricated as Child is
         now used and throws an exception when waitpid is not what it should
-        be. The third is simply the pid of the child process again.
+        be. The third is simply the pid of the child process again. The
+        final argument is the child process object itself.
 
             $runner->reap_callback( sub {
-                my ( $status, $pid ) = @_;
+                my ( $status, $pid, $pid_again, $proc ) = @_;
 
                 # Status as returned from system, so 0 is good, 1+ is bad.
                 die "Child $pid did not exit 0"
